# gh-actions-auto-docs

./: CHANGELOG.md  README.md  README2.md  action.yml  doc.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: doc.yml  dump.yml  release.yml  test.yml
src/: inputs2md.py  replace.sh  requirements.txt
src-python/: pyproject.toml
src-python/pyaction/: __main__.py  action.py
src/actiondoc/: __init__.py  __main__.py  main.py  utils.py
src/actiondocs/: __init__.py  __main__.py  gha.py  main.py  utils.py
src/pyaction/: __main__.py  action.py  utils.py
tests/: test_action.bats  test_main.py  test_utils.py
